fix typo from image to images

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -43,6 +43,6 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"$s","imageUri":"%s"}]' $APP_NAME, $REPOSITORY_URI:$IMAGE_TAG > image.json
+      - printf '[{"name":"$s","imageUri":"%s"}]' "$APP_NAME" "$REPOSITORY_URI":"$IMAGE_TAG" > images.json
 artifacts:
-  files: image.json
+  files: images.json
