removed variable and use hardcoded ecr

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,6 @@ env:
     NEXT_URL: "dmitri-GITHUB-Oauth-secrets:NEXT_URL"
     GITHUB_TOKEN: "dmitri-GITHUB-Oauth-secrets:GITHUB_TOKEN"
     AWS_REGION: "dmitri-GITHUB-Oauth-secrets:AWS_REGION"
-    ECR: "dmitri-GITHUB-Oauth-secrets:ECR"
-    APP: "dmitri-GITHUB-Oauth-secrets:APP"
 
 phases:
   pre_build:
@@ -16,8 +14,8 @@ phases:
 
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR}
-      - REPOSITORY_URI=${ECR}/${APP}
+      - aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 861507897222.dkr.ecr.eu-north-1.amazonaws.com
+      - REPOSITORY_URI=861507897222.dkr.ecr.eu-north-1.amazonaws.com/dmitri-dashboard
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
