--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@octokit/rest": "^19.0.11",
     "accept-language": "^3.0.18",
     "classnames": "^2.3.1",
+    "encoding": "^0.1.13",
     "i18next": "^22.4.11",
     "i18next-resources-to-backend": "^1.1.2",
     "next": "^13.2.4",
