--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon --watch ./src/i18n/config.js --watch ./src/i18n/locales --watch ./public/assets/icons --watch ./public/assets/images --ext ts,tsx,js,svg,json,jpeg,png --exec 'npm run images:convert && npm run i18n:type && npm run icons:type && NODE_ENV=development next dev'",
     "buildold": "npm run images:convert && npm run icons:type && npm run i18n:type && NODE_ENV=production next build",
-    "build": "next build",
+    "build": "npm run icons:type && npm run i18n:type && NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
     "lint": "next lint",
     "git-hooks:init": "sh ./scripts/git-hooks:init.sh",
