--- a/cloudformation_templates/01_template_layer.yaml
+++ b/cloudformation_templates/01_template_layer.yaml
@@ -240,6 +240,7 @@ Resources:
       TargetType: ip
       VpcId:
         Fn::ImportValue: !Sub dmitri-vpc
+      HealthCheckPath: "/it"
 
   ECSCluster:
     Type: AWS::ECS::Cluster
@@ -306,14 +307,14 @@ Resources:
               "awslogs-create-group": "true"
               "awslogs-stream-prefix": "dmitri"
 
-          HealthCheck:
-              Command: 
-                - "CMD-SHELL"
-                - "curl -f https://main.dashboard.dmitri.sandbox.soluzionifutura.it/it || exit 1"
-              Interval: 30
-              Retries: 5
-              StartPeriod: 30
-              Timeout: 5
+          # HealthCheck:
+          #     Command:
+          #       - "CMD-SHELL"
+          #       - "curl -f https://main.dashboard.dmitri.sandbox.soluzionifutura.it/it || exit 1"
+          #     Interval: 30
+          #     Retries: 5
+          #     StartPeriod: 30
+          #     Timeout: 5
 
   ECSService:
     Type: AWS::ECS::Service
